--- a/about.html
+++ b/about.html
@@ -116,10 +116,10 @@
       </div>
 
       <div class="row">
-        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
+        <div class="col-lg-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
           <div class="block-2">
             <div class="flipper">
-              <div class="front" style="background-image: url(images/person_3.jpg);">
+              <div class="front" style="background-image: url(images/steph.jpg);">
                 <div class="box">
                   <h2>Stephanie Meyer</h2>
                   <p>Superhost, gardener and beekeeper</p>
@@ -130,21 +130,21 @@
                 <blockquote>
                   <p>&ldquo;Gracious and loving, this amazing mother of three sons and grandmother of one granddaughter, is beautiful and kind, has had a brilliant career as an IT consultant in Paris and has now been enjoying for ten years a more relaxed train of life in Brittany paced with the everchanging seasons. She takes great pleasure in taking care of her bees, her chickens and her vegetable garden. She also has an impressive talent and passion for restoring and building stone walls that you will be able to admire during your stay. She also makes delicious cookies and all sorts of cakes, pies and pudding.&rdquo;</p>
                 </blockquote>
-                <div class="author d-flex">
+                <!-- <div class="author d-flex">
                   <div class="image mr-3 align-self-center">
                     <img src="images/person_3.jpg" alt="">
                   </div>
                   <div class="name align-self-center">Will Peters <span class="position">President</span></div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div> <!-- .flip-container -->
         </div>
 
-        <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
+        <div class="col-lg-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
           <div class="block-2"> <!-- .hover -->
             <div class="flipper">
-              <div class="front" style="background-image: url(images/person_1.jpg);">
+              <div class="front" style="background-image: url(images/marcel.jpg);">
                 <div class="box">
                   <h2>Marcel Meyer</h2>
                   <p>Patriarche and supercook</p>
@@ -155,12 +155,12 @@
                 <blockquote>
                   <p>&ldquo;Courtois et distingué, ce père de trois garçons et maintenant grand-père d'une petite fille, aux convictions murement établies et aux goûts et connaissances raffinés en matière d'art et d'histoire jouit d'une retraite agréable dans le cadre apaisant et tout à fait charmant du manoir de Bellefontaine. Ses talents culinaires, si vous avez la chance de goûter à l'un de ses plats, sont exceptionnels, et sa culture vaste ne manquera pas de vous faire passer un repas riche et stimulant intellectuellement.&rdquo;</p>
                 </blockquote>
-                <div class="author d-flex">
+                <!-- <div class="author d-flex">
                   <div class="image mr-3 align-self-center">
                     <img src="images/person_1.jpg" alt="">
                   </div>
                   <div class="name align-self-center">Jane Williams <span class="position">Business Manager</span></div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div> <!-- .flip-container -->
@@ -180,12 +180,12 @@
                 <blockquote>
                   <p>&ldquo;This cute little puddle will undoubtebly conquer your heart as it comes to greet you and asks you for cuddles and a playful encounter. &rdquo;</p>
                 </blockquote>
-                <div class="author d-flex">
+                <!-- <div class="author d-flex">
                   <div class="image mr-3 align-self-center">
                     <img src="images/person_2.jpg" alt="">
                   </div>
                   <div class="name align-self-center">Jeffrey Neddery <span class="position">Marketing Director</span></div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div> <!-- .flip-container -->
